# krsri-rpi3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  get-toolchains.sh
cmake/: armv8-rpi3-linux-gnueabihf.cmake
src/: CMakeLists.txt  hexapod.h  hmc5883l.cpp  hmc5883l.h  main.cpp  navigator.cpp  navigator.h  serial.cpp  serial.h  vector3.cpp  vector3.h
src/hmc5883l/: hmc5883l.cpp
